# adara

./: .gitignore  ADARA.FIX.ITEMS.RECIPE  ADARA.FIX.ITEMS.RECIPE.1.24.2022  ADARA.PERF.TESTS.2021.txt  ADARA.h  ADARAPackets.cc  ADARAPackets.h  ADARAParser.cc  ADARAParser.h  BeamlineInfo.h  COMMENTS  CRONTAB  DataSource.cc  DataSource.h  EPICS.h  Geometry.cc  JENKINS  LICENSE  LiveClient.cc  LiveClient.h  LiveServer.cc  LiveServer.h  Logging.h  Makefile  Makefile.am  MetaDataMgr.cc  MetaDataMgr.h  NEXUS.CHUNK.SIZE.txt  NOW1.RHEL9.UPGRADE.Recipe.txt  NxGen.cpp  NxGen.h  PixelMap.cc  PixelMap.h  README  README.md  RHEL9.DAQ1.UPGRADE.Recipe.txt  RHEL9.INSTALL.Notes.txt  RHEL9.NOW1.UPGRADE.Recipe.txt  RSYSLOG.MAILER  ReadyAdapter.h  (+48 more)
1_Network_Protocol/: component.tex  standalone.tex
2_SMS/: component.tex  standalone.tex
3_Live_Analysis/: component.tex
4_Parallel_Analysis/: 1_automated.tex  2_processdefinition.tex  3_chunking.tex  4_mpi.tex  5_tasksubmission.tex  component.tex  standalone.tex
6_Neutron_Timing_DSP/: component.tex  standalone.tex
7_Slow_Controls/: component.tex
8_Translation_Services/: component.tex
PVStreamer/: ADARA.h  ADARA_PVWriter.cpp  ADARA_PVWriter.h  LDAS_DeviceMonitor.cpp  LDAS_DeviceMonitor.h  LDAS_PVConfigAgent.cpp  LDAS_PVConfigAgent.h  LDAS_PVConfigMgr.cpp  LDAS_PVConfigMgr.h  LDAS_PVReader.cpp  LDAS_PVReader.h  LDAS_PVReaderAgent.cpp  LDAS_PVReaderAgent.h  LDAS_XmlParser.cpp  LDAS_XmlParser.h  LegacyDAS.h  PVConfig.h  PVLogger.h  PVReader.h  PVStreamLogger.cpp  PVStreamLogger.h  PVStreamer.cpp  PVStreamer.h  PVStreamer.rc  PVStreamer.sln  PVStreamer.vcproj  PVStreamerApp.cpp  PVStreamerDlg.cpp  PVStreamerDlg.h  PVStreamerSupport.cpp  PVStreamerSupport.h  PVWriter.h  SyncDeque.h  pvlocal.cfg  resource.h  stdafx.cpp
PVStreamer/pvsd/: .gitignore  INSTALL.CHECKLIST  Makefile.am  README  beamline_xml_mon.sh  check_xml  confck.pvsd  main.cpp  mkstatlist.pvsd  pvsd.initscript  pvsd.service  pvsd.wrapper  pvsd_log  pvsd_mon  pvsd_mon.sh  pvsdlog
PVStreamer/pvsd/test/: beamline.xml  beamline.xml.bak  ioc_AB_all.db  ioc_A_all.db  ioc_A_part.db  ioc_B2_all.db  ioc_B_all.db  ioc_B_part.db  pvsd_stress.sh  start.cmd  start_AB_all.cmd  start_A_all.cmd  start_A_part.cmd  start_B2_all.cmd  start_B_all.cmd  start_B_part.cmd
PVStreamerClient/: PVStreamerClient.vcproj  PVStreamerTestClient.cpp  ReadMe.txt
combus/: ComBus.cpp  ComBus.h  ComBusAppender.cpp  ComBusAppender.h  ComBusDefs.h  ComBusMessages.h  DASMonMessages.h  SMSMessages.h  STCMessages.h  STSMessages.h  todo.txt
common/: ADARA.h  ADARADefs.h  ADARAPackets.cc  ADARAPackets.h  ADARAParser.cc  ADARAParser.h  ADARAUtils.h  Makefile.am  POSIXParser.cc  POSIXParser.h  ReadyAdapter.h  RuleEngine.cpp  RuleEngine.h  Utils.h
conf/: pixelmap
dasmon/: ComBusRuleRouter.cpp  ComBusRuleRouter.h  ConfigureSMSConnectionDlg.cpp  ConfigureSMSConnectionDlg.h  ConfigureSMSConnectionDlg.ui  DASMON.INSTALL  DASMON.RHEL7.Install.Notes.txt  DASMON.RHEL9.Install.Notes.txt  INSTALL.CHECKLIST  StreamMonitor.cpp  StreamMonitor.h  dasmon  dasmon.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  rule.cpp  rule.h  ruledefs.h  ruleengine.cpp  ruleengine.h  todo.txt  ui_ConfigureSMSConnectionDlg.h  ui_mainwindow.h
dasmon/server/: ComBusRouter.cpp  ComBusRouter.h  Makefile.am  Rule.cpp  Rule.h  RuleEngine.cpp  RuleEngine.h  StreamAnalyzer.cpp  StreamAnalyzer.h  StreamMonitor.cpp  StreamMonitor.h  confck.dasmon  dasmon_log  dasmond.conf  dasmond.wrapper  dasmond_mon  dasmondlog  init.dasmond.conf  main.cpp  mkstatlist.dasmon  schema.txt  signal.cfg  systemd.dasmond.service
dasmon/server/dasmon-server/: dasmon-server  dasmon-server.pro
dasmon/server/engine/: RuleEngine.cpp  RuleEngine.h  muParser.cpp  muParserBase.cpp  muParserBase.h  muParserBytecode.cpp  muParserCallback.cpp  muParserCallback.h  muParserError.cpp  muParserError.h  muParserToken.h  muParserTokenReader.cpp
sms/: BeamMonitorConfig.cc  BeamMonitorConfig.h  BeamlineInfo.cc  BeamlineInfo.h  ComBusSMSMon.cc  ComBusSMSMon.h  DataSource.cc  DataSource.h  DetectorBankSet.cc  DetectorBankSet.h  EPICS.h  EventFd.cc  EventFd.h  FastMeta.cc  FastMeta.h  Geometry.cc  Geometry.h  INSTALL.CHECKLIST  INSTALL.CHECKLIST-ALT  LiveClient.cc  LiveClient.h  LiveServer.cc  LiveServer.h  Logging.h  Makefile.am  Markers.cc  Markers.h  MetaDataMgr.cc  MetaDataMgr.h  PixelMap.cc  PixelMap.h  QuickCounter.cc  QuickCounter.h  README  RUN.STATUS.END.txt  ReadyAdapter.cc  ReadyAdapter.h  RunInfo.cc  RunInfo.h  SMSControl.cc  (+52 more)
sms/conf/: logging.conf  pixelmap  smsd.conf
sms/test/: storage-test.cc
stc/: ComBusTransMon.cpp  ComBusTransMon.h  INSTALL.CHECKLIST  MANUAL.IMAGE.COPY.txt  Makefile.am  NxGen.cpp  NxGen.h  README.md  README.stc-prod.txt  STC.VM.Nxs2Echo.Packages.txt  StreamParser.cpp  StreamParser.h  TraceException.h  TransCompletePkt.h  UserIdLdap.c  UserIdLdap.cpp  UserIdLdap.h  adara_stc_find  confck.stc  confck.stc-config  h5nx.cpp  h5nx.hpp  main.cpp  mkstatlist.stc  napi.h  nxs2echo.dummy  retrieveUnmapped.cpp  stc.wrapper  stc_config.xml  stc_pre_post.bash  stc_pre_post_dummy.bash  stc_pre_post_graffiti.bash  stc_pre_post_imaging.bash  stc_pre_post_imaging.py  stc_pre_post_mobile_timepix3.py  stc_pre_post_nxs2echo.bash  stc_pre_post_timepix3.py  stc_search_logs  stcck  stcckrun  (+8 more)
stc/stc_pre_post_testing/: imaging_test_1.sh  imaging_test_2.sh  imaging_test_3.sh  imaging_test_4.sh  imaging_test_5.sh
sts/: ComBusTransMon.cpp  ComBusTransMon.h  INSTALL.CHECKLIST  Makefile.am  NxGen.cpp  NxGen.h  README.md  README.sts-prod.txt  StreamParser.cpp  StreamParser.h  TraceException.h  TransCompletePkt.h  UserIdLdap.c  UserIdLdap.cpp  UserIdLdap.h  Utils.h  h5nx.cpp  h5nx.hpp  main.cpp  stc.wrapper  sts.1  sts.pro  sts.wrapper  sts.xinetd  sts_config.xml  stsdefs.h  todo.txt  updateConfig  updateSTSConfig
tools/: Makefile.am  adara-dump.cc  adara-gen.cc  adara-munge.cc  adara-parser.cc  adara-pvgen.cc  adara-replay.cc  extract_run_times  live-client.sh
tools/QParser/: .gitignore  QParser.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+151 files in other folders)
